adapted to updated server API

--- a/Properties/MainWindow.glade
+++ b/Properties/MainWindow.glade
@@ -686,6 +686,19 @@
                   </packing>
                 </child>
                 <child>
+              <object class="GtkButton" id="visits">
+                <property name="label" translatable="yes">visits</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">false</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+                <child>
                   <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
